Added creator name field for Bug model and as requirement for the BugForm

--- a/tracker/templates/tracker/project/detail.html
+++ b/tracker/templates/tracker/project/detail.html
@@ -11,8 +11,9 @@
 	<div class="comment">
 	<h3>
 		<a href="{{ bug.get_absolute_url }}">
-			Bug, Fixed: {{ bug.complete }}
+			Bug {{ forloop.counter }}
 		</a>
+		created by {{bug.name}}, {{ bug.open_date }}
 	</h3>
 	<p>{{ bug.description }}</p>
 	</div>
