Added pagination to project/detail.html so bugs are separated into pages. Added Home link on the sidebar, and added a Back link on the Bug detail.html.

--- a/tracker/templates/tracker/bug/detail.html
+++ b/tracker/templates/tracker/bug/detail.html
@@ -7,6 +7,9 @@
 	<h2>
 	Bug Opened {{ bug.open_date }}
 	</h2>
+	<a href="/{{ bug.project.name }}">
+		Back to project
+	</a>
 	<br>
 	<p>{{ bug.description }}</p>
 
