--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -13,6 +13,8 @@
 		<div id="sidebar">
 			<h2>Bugoff</h2>
 			<p>The python bug tracker.</p>
+			<br>
+			<a href="/">Home</a>
 		</div>
 	</body>
 </html>
