--- a/tracker/templates/tracker/project/detail.html
+++ b/tracker/templates/tracker/project/detail.html
@@ -11,7 +11,7 @@
 	<div class="comment">
 	<h3>
 		<a href="{{ bug.get_absolute_url }}">
-			Bug {{ forloop.counter }}
+			Bug {{ bug.id }}
 		</a>
 		created by {{bug.name}}, {{ bug.open_date }}
 	</h3>
