added tags and tag filtering functionality for bugs

--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -14,7 +14,7 @@
 			<h2>Bugoff</h2>
 			<p>The python bug tracker.</p>
 			<br>
-			<a href="/">Home</a>
+			<a href="tracker/">Home</a>
 		</div>
 	</body>
 </html>
